--- a/OsmAnd/res/layout/transport_route_card.xml
+++ b/OsmAnd/res/layout/transport_route_card.xml
@@ -20,16 +20,18 @@
 		android:id="@+id/top_divider"
 		android:layout_width="match_parent"
 		android:layout_height="1dp"
+		android:background="?attr/dashboard_divider"
 		android:focusable="false" />
 
 	<LinearLayout
 		android:id="@+id/routes_info_container"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
+		android:background="?attr/route_info_bg"
 		android:orientation="vertical"
 		android:paddingLeft="@dimen/route_info_buttons_padding_top_bottom"
-		android:paddingRight="@dimen/route_info_buttons_padding_top_bottom"
-		android:paddingTop="@dimen/content_padding">
+		android:paddingTop="@dimen/content_padding"
+		android:paddingRight="@dimen/route_info_buttons_padding_top_bottom">
 
 		<net.osmand.plus.widgets.FlowLayout
 			android:id="@+id/routes_badges"
@@ -49,6 +51,7 @@
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:paddingBottom="6dp"
+				android:textColor="?android:attr/textColorSecondary"
 				android:textSize="@dimen/default_desc_text_size"
 				osmand:typeface="@string/font_roboto_regular"
 				tools:text="@string/route_from" />
@@ -57,6 +60,7 @@
 				android:id="@+id/way_line"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:textColor="?android:attr/textColorSecondary"
 				android:textSize="@dimen/default_desc_text_size"
 				osmand:typeface="@string/font_roboto_regular"
 				tools:text="@string/route_from" />
