Fix several bugs and improve ui

--- a/OsmAnd/res/layout/plan_route_info.xml
+++ b/OsmAnd/res/layout/plan_route_info.xml
@@ -123,8 +123,9 @@
 
 					<LinearLayout
 						android:layout_width="0dp"
-						android:layout_height="match_parent"
+						android:layout_height="wrap_content"
 						android:layout_weight="1"
+						android:minHeight="@dimen/route_info_list_item_height"
 						android:orientation="vertical">
 
 						<TextView
@@ -235,8 +236,9 @@
 
 					<LinearLayout
 						android:layout_width="0dp"
-						android:layout_height="match_parent"
+						android:layout_height="wrap_content"
 						android:layout_weight="1"
+						android:minHeight="@dimen/route_info_list_item_height"
 						android:orientation="vertical">
 
 						<TextView
@@ -349,8 +351,9 @@
 
 					<LinearLayout
 						android:layout_width="0dp"
-						android:layout_height="match_parent"
+						android:layout_height="wrap_content"
 						android:layout_weight="1"
+						android:minHeight="@dimen/route_info_list_item_height"
 						android:orientation="vertical">
 
 						<TextView
