--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -2609,6 +2609,7 @@
 	<string name="poi_health_specialty_urology_yes">Urology</string>
 	<string name="poi_health_specialty_surgery_yes">General surgery</string>
 	<string name="poi_health_specialty_radiology_yes">Radiology</string>
+	<string name="poi_health_specialty_radiotheraphy_yes">Radiotheraphy</string>
 	<string name="poi_health_specialty_psychiatry_yes">Psychiatry</string>
 	<string name="poi_health_specialty_neurology_yes">Neurology</string>
 	<string name="poi_health_specialty_dermatovenereology_yes">Dermato-venereology</string>
@@ -3847,6 +3848,7 @@
 	<string name="poi_payment_contactless_yes">Contactless</string>
 	<string name="poi_payment_contactless_no">Contactless not accepted</string>
 
+	<string name="poi_hazard">Hazard</string>
 	<string name="poi_hazard_nuclear">Nuclear hazard</string>
 	<string name="poi_hazard_erosion">Erosion hazard</string>
 	<string name="poi_hazard_avalanche">Avalanche hazard</string>
