--- a/OsmAnd/res/values-es/phrases.xml
+++ b/OsmAnd/res/values-es/phrases.xml
@@ -3330,7 +3330,7 @@
     <string name="poi_map_size_city">Tamaño del mapa: ciudad</string>
     <string name="poi_map_size_region">Tamaño del mapa: región</string>
     <string name="poi_couloir">Couloir (barranco estrecho y empinado)</string>
-    <string name="poi_charging_station_filter">Estación de carga</string>
+    <string name="poi_charging_station">Estación de carga</string>
     <string name="poi_depot">Depósito</string>
     <string name="poi_letter_box">Buzón postal</string>
     <string name="poi_route_subway_ref">Metro</string>
