--- a/OsmAnd/res/values-be/phrases.xml
+++ b/OsmAnd/res/values-be/phrases.xml
@@ -3329,7 +3329,7 @@
     <string name="poi_map_size_site">Памер мапы: лакальная</string>
     <string name="poi_map_size_city">Памер мапы: горад</string>
     <string name="poi_map_size_region">Памер мапы: рэгіён</string>
-    <string name="poi_charging_station_filter">Зарадная станцыя</string>
+    <string name="poi_charging_station">Зарадная станцыя</string>
     <string name="poi_depot">Дэпо</string>
     <string name="poi_letter_box">Паштовая скрыня</string>
     <string name="poi_post_street">Вуліца</string>
