--- a/OsmAnd/res/values-cs/phrases.xml
+++ b/OsmAnd/res/values-cs/phrases.xml
@@ -3723,7 +3723,7 @@
 	<string name="poi_map_size_city">Mapa celé obce</string>
 	<string name="poi_map_size_region">Mapa okolního regionu</string>
 
-	<string name="poi_charging_station_filter">Nabíjecí stanice</string>
+	<string name="poi_charging_station">Nabíjecí stanice</string>
 
 	<string name="poi_depot">Depo</string>
 
