--- a/OsmAnd/res/values-es-rUS/phrases.xml
+++ b/OsmAnd/res/values-es-rUS/phrases.xml
@@ -3336,7 +3336,7 @@
     <string name="poi_map_size_site">Tamaño del mapa: sitio</string>
     <string name="poi_map_size_city">Tamaño del mapa: ciudad</string>
     <string name="poi_map_size_region">Tamaño del mapa: región</string>
-    <string name="poi_charging_station_filter">Estación de carga</string>
+    <string name="poi_charging_station">Estación de carga</string>
     <string name="poi_depot">Depósito</string>
     <string name="poi_letter_box">Buzón postal (privado)</string>
     <string name="poi_post_street">Calle</string>
