--- a/OsmAnd/res/values-hu/phrases.xml
+++ b/OsmAnd/res/values-hu/phrases.xml
@@ -3323,7 +3323,7 @@
     <string name="poi_parking_fee">Parkolási díj</string>
     <string name="poi_amperage">Áramerősség (A)</string>
     <string name="poi_charging_station_output">Töltőállomás teljesítménye (kW)</string>
-    <string name="poi_charging_station_filter">Töltőállomás</string>
+    <string name="poi_charging_station">Töltőállomás</string>
     <string name="poi_depot">Járműtároló</string>
     <string name="poi_letter_box">Levélszekrény</string>
     <string name="poi_post_street">Utca</string>
