--- a/OsmAnd/res/values-it/phrases.xml
+++ b/OsmAnd/res/values-it/phrases.xml
@@ -2560,7 +2560,7 @@
 	<string name="poi_parking_fee">Parcheggio a pagamento</string>
 
 	<string name="poi_amperage">Amperaggio</string>
-	<string name="poi_charging_station_filter">Stazione di ricarica</string>
+	<string name="poi_charging_station">Stazione di ricarica</string>
 
 	<string name="poi_post_street">Strada</string>
 	<string name="poi_post_housenumber">Numero civico</string>
