--- a/OsmAnd/res/values-sc/phrases.xml
+++ b/OsmAnd/res/values-sc/phrases.xml
@@ -3382,7 +3382,7 @@
     <string name="poi_map_size_site">Mannària de sa mapa: giassu</string>
     <string name="poi_map_size_city">Mannària de sa mapa: tzitade</string>
     <string name="poi_map_size_region">Mannària de sa mapa: regione</string>
-    <string name="poi_charging_station_filter">Istatzione de càrriga</string>
+    <string name="poi_charging_station">Istatzione de càrriga</string>
     <string name="poi_depot">Depòsitu</string>
     <string name="poi_letter_box">Cassita de sas lìteras</string>
     <string name="poi_climbing_boulder_yes">Massismu: eja</string>
