--- a/OsmAnd/res/values-sk/phrases.xml
+++ b/OsmAnd/res/values-sk/phrases.xml
@@ -3460,7 +3460,7 @@
 	<string name="poi_water_place_access_family">Rodina</string>
 	<string name="poi_water_place_access_multifamilies">Viac rodín</string>
 
-	<string name="poi_charging_station_filter">Nabíjacia stanica</string>
+	<string name="poi_charging_station">Nabíjacia stanica</string>
 
 	<string name="poi_depot">Depo</string>
 
