--- a/OsmAnd/res/values-uk/phrases.xml
+++ b/OsmAnd/res/values-uk/phrases.xml
@@ -3640,7 +3640,7 @@
 	<string name="poi_map_size_city">Охоплення мапи: місто</string>
 	<string name="poi_map_size_region">Охоплення мапи: регіон</string>
 
-<string name="poi_charging_station_filter">Зарядна станція</string>
+<string name="poi_charging_station">Зарядна станція</string>
 
 <string name="poi_depot">Депо</string>
 
