--- a/OsmAnd/res/values-zh-rTW/phrases.xml
+++ b/OsmAnd/res/values-zh-rTW/phrases.xml
@@ -3328,7 +3328,7 @@
     <string name="poi_map_size_site">地圖大小：地點</string>
     <string name="poi_map_size_city">地圖大小：城市</string>
     <string name="poi_map_size_region">地圖大小：區域</string>
-    <string name="poi_charging_station_filter">充電站</string>
+    <string name="poi_charging_station">充電站</string>
     <string name="poi_route_subway_ref">捷運</string>
     <string name="poi_depot">車站</string>
     <string name="poi_letter_box">信箱</string>
